@@ -125,6 +125,12 @@ import er.extensions.foundation.ERXValueUtilities;
  * @author Chuck Hill
  */
 public abstract class AjaxGridNavBar extends WOComponent {
+	/**
+	 * Do I need to update serialVersionUID?
+	 * See section 5.6 <cite>Type Changes Affecting Serialization</cite> on page 51 of the 
+	 * <a href="http://java.sun.com/j2se/1.4/pdf/serial-spec.pdf">Java Object Serialization Spec</a>
+	 */
+	private static final long serialVersionUID = 1L;
 
 	public static final String CONTAINER_ID_BINDING = "containerID";
 	public static final String DISPLAY_GROUP_BINDING = "displayGroup";
@@ -134,9 +140,7 @@ public abstract class AjaxGridNavBar extends WOComponent {
 		super(context);
 	}
 
-	/**
-	 * @return false, AjaxGridNavBar is stateless and manually synchronized
-	 */
+	@Override
 	public boolean isStateless() {
 		return true;
 	}
@@ -169,7 +173,7 @@ public abstract class AjaxGridNavBar extends WOComponent {
 		// If we round this instead, the slider movement is more inutuitive,
 		// especially with smaller batch sizes.
 		if (newValue instanceof BigDecimal) {
-			int roundedIndex = new Float(((BigDecimal) newValue).floatValue() + 0.5).intValue();
+			int roundedIndex = Float.valueOf(((BigDecimal) newValue).floatValue() + 0.5f).intValue();
 			displayGroup().setCurrentBatchIndex(roundedIndex);
 		}
 		else {
